--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,9 @@
 .App {
+  min-height: 100vh;
   text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .board {
