--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  background-color: rgb(242, 242, 242);
 }
 
 .board {
@@ -12,6 +13,19 @@
 .board-row {
   display: flex;
   flex-direction: row;
+}
+
+.button {
+  border: 1px solid #ddd;
+  background-color: rgb(249, 249, 249);
+}
+
+.button.-start {
+  font-size: 32px;
+  width: 1.8em;
+  height: 1.8em;
+  line-height: 1.666;
+  text-align: center;
 }
 
 .tile {
@@ -25,6 +39,7 @@
   border: 1px solid #ddd;
   background-color: rgb(249, 249, 249);
 }
+.button.-raised,
 .tile.-covered,
 .tile.-flag
 {
@@ -33,6 +48,7 @@
   border-left: 3px solid white;
   border-right: 3px solid #ccc;
   border-bottom: 3px solid #ccc;
+  border-radius: 0;
 }
 .tile.-proximity-1 {
   color: blue;
