Improve styling of nav links

--- a/src/App.css
+++ b/src/App.css
@@ -106,9 +106,7 @@
   font-size: 13px;
 }
 .links-nav a {
-  color: rgb(235, 8, 95);
+  color: rgb(70, 70, 70);
   text-decoration: none;
-}
-.links-nav a:hover {
-  text-decoration: underline;
+  border-bottom: 1px dotted currentColor;
 }
